Java opt MaxPermSize --> MaxMetaspaceSize, includes for Java 17+ sun.nio.ch, java.lang ALL-UNNAMED (#464)
* Java opt MaxPermSize --> MaxMetaspaceSize, includes for Java 17+ sun.nio.ch, java.lang ALL-UNNAMED

* Default spark.version 3.5.0 --> 3.5.3

* Docs update PR - GraphFrames version, future plans re: Apache Spark inclusion (#467)